# wizzle

./: .gitignore  LICENSE  LICENSE.txt  README.md  cleanup-instructions.md  opencode-models.yaml  todo.md
.github/workflows/: build-desktop-packages.yml
remote-config/: README.md  THIRD_PARTY_NOTICES.md  app-config.yaml  generate-config.mjs
remote-config/prompts/: agent-system.txt  context-pressure-system.txt  final-response-system.txt  max-steps-final-system.txt  worker-system.txt
remote-config/providers/: agnes-ai.yaml  alibaba.yaml  anthropic.yaml  cerebras.yaml  cloudflare-workers-ai.yaml  cohere.yaml  deepseek.yaml  fireworks-ai.yaml  gemini.yaml  github-models.yaml  groq.yaml  hugging-face.yaml  kilo.yaml  kimi.yaml  lm-studio.yaml  (+12 more)
wizzle-agent/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
wizzle-agent/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
wizzle-agent/src-tauri/capabilities/: default.json
wizzle-agent/src-tauri/icons/: icon.icns
wizzle-agent/src-tauri/src/: app_update.rs  image_preview.rs  lib.rs  logging.rs  main.rs  remote_config.rs
wizzle-agent/src-tauri/src/agent/: context.rs  mod.rs  process_command.rs  runtime.rs  types.rs
wizzle-agent/src-tauri/src/agent/tools/: bash.rs  edit.rs  mod.rs  output.rs  pathing.rs  read.rs  shared.rs  shell.rs  write.rs
wizzle-agent/src-tauri/src/agent/tools/verification/: adapters.rs  config.rs  diagnostics.rs  mod.rs  runner.rs  types.rs  watcher.rs
wizzle-agent/src-tauri/src/providers/: anthropic.rs  crypto.rs  google.rs  mod.rs  native_transport.rs  openai_compatible.rs  reasoning.rs  repository.rs  retry.rs  tokenizer_assets.rs  types.rs
wizzle-agent/src-tauri/src/workspace/: attachments.rs  mod.rs  paths.rs  repository.rs  sqlite_repository.rs  types.rs
wizzle-proxy/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+214 files in other folders)
