[package]
name = "wizzle-agent"
version = "0.1.0"
description = "Wizzle desktop coding agent"
authors = ["Wizzle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wizzle_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
image = { version = "0.25", default-features = false, features = ["avif", "bmp", "gif", "jpeg", "png", "webp"] }
keyring = "4.1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-notification = "2"
